instalacion de axios

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/JuanWehitt/myApiSpotify#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "axios": "^0.27.2"
+    "express": "^4.18.1"
   }
 }
