--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/JuanWehitt/myApiSpotify#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "cookie-parser": "^1.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
