Cambios en base a correcciones en Readme

--- a/demo.env
+++ b/demo.env
@@ -2,3 +2,4 @@ PORT=3000
 CLIENT_ID=VALOR_DE_LA_CADENA_SIN_COMILLAS_NI_PUNTO_Y_COMA
 CLIENT_SECRET=VALOR_DE_LA_CADENA_SIN_COMILLAS_NI_PUNTO_Y_COMA
 REDIRECT_URI=VALOR_DE_LA_CADENA_SIN_COMILLAS_NI_PUNTO_Y_COMA
+ACCESS_TOKEN=VALOR_DE_LA_CADENA_SIN_COMILLAS_NI_PUNTO_Y_COMA
